# xml-parser

./: CMakeLists.txt  README.md
data/: example-simple.xml
src/: char_stream.cpp  char_stream.hpp  common.hpp  parsers.hpp  string_map.hpp  vt100.hpp  xml.cpp  xml.hpp
tests/: extract_words.cpp  online_xml.cpp  only_strings.cpp  print_file.cpp  xml.cpp
